--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -1,8 +1,9 @@
 name: Latest blog post workflow
 on:
   schedule:
-    # Runs every hour
     - cron: '0 * * * *'
+  workflow_dispatch:  
+  
 jobs:
   update-readme-with-blog:
     name: Update this repo's README with latest blog posts
